@startuml
skinparam classAttributeIconSize 0

title Board Game Cafe System Class Diagram

' ==========================================

package "Management Core" {
    class BoardGameCafeSystem {
        - personnel : List<Person>
        - orders : List<Order>
        - reservations : List<Reservation>
        - transactions : List<Transaction>
        - branches : List<BoardGameCafeBranch>
        + add_branch(cafe : BoardGameCafeBranch)
        + remove_branch(cafe_id : str = None, name : str = None)
        + add_menu_item(item : MenuItem)

        + register_new_staff(staff_info, branch_id)
        + terminate_staff(staff_id)
        + update_table_pricing(table_type, new_price)
        
        + assign_table_to_customer(customer_id, table_id)
        + process_check_in(reservation_id)
        + process_check_out(table_id)
        + check_student_status(customer_id) : bool
        + handle_payment(transaction_id, payment_details)

        + check_in_play_table()
        + check_out_play_table(table_name : str)
        + create_reservation()
        + check_availability()
        + confirm_reservation()
        + cancel_reservation()
        
        + view_menu() : MenuList
        + place_order(order : Order) : bool
        + process_payment(payment : Payment) : bool

        + get_transaction_history(datetime) : List<Transaction>
    }

    class BoardGameCafeBranch {
        - cafe_id : str
        - name : str
        - location : str
        - BoardGames : List<BoardGame>
        - PlayTables : List<PlayTable>
        - Menu : MenuList
        + get_Reservation_schedule(date : date) : List<Reservation>
    }

    enum TableStatus {
        AVAILABLE
        OCCUPIED
        RESERVED
        MAINTENANCE
    }

    abstract class PlayTable {
        - current_customer : List<Customer>
        - price_per_hour : float
        - table_id : str
        - table_name : str
        - status : str
        - active_orders : List<Order>
        - borrowed_games : List<BoardGame>
        
        + clear_table()
        + order_item(item : MenuItem, qty : int) : Order
        + borrow_game(game : BoardGame) : bool
        + return_game(game : BoardGame, is_damaged : bool) : void
        + calculate_price(duration : float) : float
        + get_menu_ordered() : List<MenuItem>
    }

    class PlayTableStandard {
        - price_per_hour : 50.00
        - table_id : str
        - capacity : int
        - status : str
        + clear_table()
    }

    class PlayTableVIP {
        - price_per_hour : 50.00
        - table_id : str
        - capacity : int
        - status : str
        + clear_table()
    }
}

package "Person & Auth" {
    abstract class Person {
        - user_id : str
        - name : str
    }

    class Manager {
        - managed_branch : BoardGameCafeBranch
    }

    class NonCustomer {
        - phone : str
        - email : str
        - hire_date : date
        - salary : float
    }
    
    class Owner {
        - branch_owned : List[BoardGameCafeBranch]
    }
    
    class Staff {
        - shift_start_time : time
        - shift_end_time : time
        - assigned_branch : BoardGameCafeBranch
        - overtime_hours : float
        - performance_score : float
        - is_on_duty : bool
    }

    class Customer {
        - total_spent : float
        - birthdate : date
        - member_tier : str
        - is_student : bool             
        
        + get_discount(): float
    }
}

package "Inventory & Menu" {

    enum OrderStatus {
        PENDING
        SERVED
        CANCELLED
    }

    enum BoardGameStatus {
        AVAILABLE
        IN-USE
        MAINTENANCE
        UNAVAILABLE
    } 

    class Order {
        - order_id : str
        - items : List<MenuItem>
        - quantity : int
        - status : OrderStatus

        + calculate_total()
        + check_all_served()
    }

    class MenuList {
        - items : List<MenuItem>
        + item_add()
        + item_remove()
    }

    abstract class MenuItem {
        - item_id : str
        - name : str
        - price : float
        - stock_quantity : int   
        - is_available : bool    
        
        + get_price(): float
        + update_stock(qty : int) : void 
    }

    class Food {
        + get_price(): float
    }

    class Drink {
        + get_price(): float
    }

    class BoardGame {
        - game_id : str
        - game_name : str
        - genre : str
        - status : str
        - price : float
        + update_status(status : str) : void
        + get_price(): float
    }
}

package "Operations (Order & Resv)" {

    enum ReservationStatus {
        PENDING
        CONFIRMED
        CANCELLED
        NO-SHOW
    }

    enum TransactionStatus {
        ACTIVE
        COMPLETED
        VOIDED
    }

    class Payment {
        - payment_id : str
        - amount : float
        - payment_method : PaymentMethod   
        - payment_time : datetime    
        + process_payment()
    }

    abstract class PaymentMethod {
        - method_id : str
        + validate_method() : bool
    }

    class Cash {
        + validate_method() : bool
    }
    class Card {
        + validate_method() : bool
    }
    class OnlinePayment {
        + validate_method() : bool
    }

    interface PaymentGateway <<External API>> {
        + verify_transaction(amount : float, method_details : str) : bool
        + refund_transaction(transaction_id : str) : bool
    }

    ' === อัปเดต Methods ตามเกณฑ์ OOP ===
    class Reservation {
        - reservation_id : str
        - customer : Customer
        - date : date
        - start_time : time
        - end_time : time
        - play_table : PlayTable
        - branch : BoardGameCafeBranch
        - status : str
        
        + update_status(new_status : str) : void

    }

    ' === อัปเดต Methods ตามเกณฑ์ OOP ===
    class Transaction {
        - transaction_id : str
        - customer : Customer
        - reservation : Reservation
        - play_table : PlayTable
        - orders : List<Order>
        - played_games : List<BoardGame>
        - check_in_time : datetime
        - check_out_time : datetime
        - total_boardgame_fee : float
        - total_fnb_price : float
        - damage_fine : float
        - applied_discount_type : str   
        - discount_amount : float       
        - grand_total : float
        - payment : Payment
        - status : TransactionStatus
        
        + apply_damage_fine(amount : float, reason : str) : void
        + apply_discount_code(code : str) : bool
        + calculate_grand_total() : float
        + complete_transaction(payment : Payment) : bool
        + generate_receipt() : str
    }
}

' ==========================================

' --- Inheritance ---
Person <|-- NonCustomer
NonCustomer <|-- Manager
NonCustomer <|-- Staff
NonCustomer <|-- Owner
Person <|-- Customer

PlayTable <|-- PlayTableStandard
PlayTable <|-- PlayTableVIP

MenuItem <|-- Food
MenuItem <|-- Drink

PaymentMethod <|-- Cash
PaymentMethod <|-- Card
PaymentMethod <|-- OnlinePayment

' --- Composition ---
BoardGameCafeSystem "1" *--> "*" BoardGameCafeBranch
BoardGameCafeSystem "1" *--> "*" Person
BoardGameCafeSystem "1" *--> "*" Order
BoardGameCafeSystem "1" *--> "*" Reservation
BoardGameCafeSystem "1" *--> "*" Transaction
BoardGameCafeBranch "1" *--> "*" BoardGame
BoardGameCafeBranch "1" *--> "*" PlayTable
BoardGameCafeBranch "1" *--> "1" MenuList

' --- Aggregation ---
MenuList "1" o--> "*" MenuItem
PlayTable "1" o--> "*" Order
Transaction "1" o--> "*" Order

' --- Association ---
PlayTable "1" --> "0..*" Customer
PlayTable "1" --> "0..*" BoardGame
Reservation "1" --> "1" Customer
Reservation "1" --> "1" PlayTable
Reservation "1" --> "1" BoardGameCafeBranch

Payment "1" --> "1" PaymentMethod
Order "1" --> "*" MenuItem

' --- Transaction Associations ---
Transaction "1" --> "0..1" Reservation
Transaction "1" --> "1" PlayTable
Transaction "1" --> "1" Customer
Transaction "1" --> "0..*" Payment
Transaction "1" --> "0..*" BoardGame

' --- External Associations ---
Card "1" --> "1" PaymentGateway : <<uses>>
OnlinePayment "1" --> "1" PaymentGateway : <<uses>>

@enduml